--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ before_install:
   - wget https://dl.bintray.com/mitchellh/vagrant/vagrant_1.7.2_x86_64.deb
   - sudo dpkg -i vagrant_*.deb
   - sudo apt-get -f install
-  - sudo apt-get install -y virtualbox
+  - sudo apt-get install -y build-essential linux-headers-generic virtualbox
