First version of dockplugin

--- a/Godeps/_workspace/src/github.com/contiv/objmodel/contivModel/app.json
+++ b/Godeps/_workspace/src/github.com/contiv/objmodel/contivModel/app.json
@@ -4,7 +4,7 @@
 		{
 			"name": "app",
 			"type": "object",
-			"key": "string",
+			"key": [ "tenantName", "appName" ],
 			"properties": {
 				"appName": {
 					"type": "string",
