libcompose + service discovery integration

--- a/scripts/docker.service
+++ b/scripts/docker.service
@@ -6,7 +6,7 @@ Requires=docker.socket
 
 [Service]
 Type=notify
-ExecStart=/usr/bin/docker daemon -H fd:// --cluster-store=consul://localhost:8500
+ExecStart=/usr/bin/docker daemon -H fd:// --cluster-store=etcd://localhost:2379
 MountFlags=slave
 LimitNOFILE=1048576
 LimitNPROC=1048576
