--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,11 @@ resolv.conf
 
 # python
 *.pyc
+
+# cscope db
+cscope.*
+
+# k8s vagrant and ansible temp files
+.contiv_k8s_inventory
+.out.vagrant
+.etc_hosts
