--- a/Godeps/_workspace/src/github.com/contiv/contivmodel/appProfile.json
+++ b/Godeps/_workspace/src/github.com/contiv/contivmodel/appProfile.json
@@ -4,17 +4,11 @@
 		{
 			"name": "appProfile",
 			"type": "object",
-			"key": [ "tenantName", "networkName", "appProfileName" ],
+			"key": [ "tenantName", "appProfileName" ],
 			"properties": {
 				"tenantName": {
 					"type": "string",
 					"title": "Tenant Name",
-					"length": 64,
-					"format": "^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\\\\-]*[a-zA-Z0-9])\\\\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\\\\-]*[A-Za-z0-9])$"
-				},
-				"networkName": {
-					"type": "string",
-					"title": "Network of App Prof",
 					"length": 64,
 					"format": "^(([a-zA-Z0-9]|[a-zA-Z0-9][a-zA-Z0-9\\\\-]*[a-zA-Z0-9])\\\\.)*([A-Za-z0-9]|[A-Za-z0-9][A-Za-z0-9\\\\-]*[A-Za-z0-9])$"
 				},
@@ -38,9 +32,6 @@
 			"links": {
 				"tenant": {
 					"ref": "tenant"
-				},
-				"network": {
-					"ref": "network"
 				}
 			}
 		}
