--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -79,6 +79,19 @@ sudo yum install -y net-tools
 #git config --global http.proxy $HTTP_PROXY
 SCRIPT
 
+provision_quagga = <<SCRIPT
+## setup the environment file. Export the env-vars passed as args to 'vagrant up'
+echo Args passed: [[ $@ ]]
+echo "export http_proxy='$1'" >> /etc/profile.d/envvar.sh
+echo "export https_proxy='$2'" >> /etc/profile.d/envvar.sh
+source /etc/profile.d/envvar.sh
+SCRIPT
+
+provision_gobgp = <<SCRIPT
+#Get gobgp binary
+wget https://cisco.box.com/shared/static/5leqlo84kjh0thty91ouotilm4ish3nz -q -O #{gopath_folder}/bin/gobgp && chmod +x #{gopath_folder}/bin/gobgp
+SCRIPT
+
 # begin execution here
 cluster = read_cluster_config
 create_etc_hosts(cluster)
@@ -89,8 +102,48 @@ Vagrant.configure(2) do |config|
 
   config.vm.synced_folder "./export", "/shared"
   #config.vm.provider(:virtualbox){|v| v.functional_vboxsf = false }
+  if ENV['CONTIV_L3'] then
+    config.vm.define "quagga1" do |quagga1|
 
+      quagga1.vm.box = "contiv/quagga1"
+      quagga1.vm.box_version = "0.0.1"
+      quagga1.vm.host_name = "quagga1"
+      quagga1.vm.network :private_network, ip: base_ip + "51", virtualbox__intnet: "true", auto_config: false
+      quagga1.vm.network "private_network",
+                       ip: "80.1.1.200",
+                       virtualbox__intnet: "contiv_orange"
+      quagga1.vm.network "private_network",
+                       ip: "70.1.1.2",
+                       virtualbox__intnet: "contiv_blue"
+      quagga1.vm.provision "shell" do |s|
+        s.inline = provision_quagga
+        s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
+      end
+    end
+    config.vm.define "quagga2" do |quagga2|
+
+      quagga2.vm.box = "contiv/quagga2"
+      quagga2.vm.box_version = "0.0.1"
+      quagga2.vm.host_name = "quagga2"
+      quagga2.vm.network :private_network, ip: base_ip + "52", virtualbox__intnet: "true", auto_config: false
+      quagga2.vm.network "private_network",
+                       ip: "70.1.1.1",
+                       virtualbox__intnet: "contiv_blue"
+      quagga2.vm.network "private_network",
+                       ip: "60.1.1.200",
+                       virtualbox__intnet: "contiv_green"
+      quagga2.vm.network "private_network",
+                       ip: "50.1.1.200",
+                       virtualbox__intnet: "contiv_yellow"
+
+      quagga2.vm.provision "shell" do |s|
+        s.inline = provision_quagga
+        s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
+      end
+    end
+  end
   cluster.each do |role, member_list|
+    n=0
     member_list.each do |member_info|
       config.vm.define vm_name = member_info["name"] do |c|
          if ENV['CONTIV_K8'] == "1" then
@@ -117,7 +170,7 @@ Vagrant.configure(2) do |config|
                   else
 		    c.vm.box = "contiv/k8node03"
  		 end
- 	      end	
+ 	      end
 	   end
 	   c.vm.synced_folder "./../../bin","/opt/gopath/bin"
 	   c.vm.provision "shell" do |s|
@@ -130,7 +183,7 @@ Vagrant.configure(2) do |config|
             c.vm.provision "shell" do |s|
                 s.inline = provision_master
                 s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
-            end             
+            end
 	end
         # Customize VM for better performance
         config.vm.provider "virtualbox" do |v|
@@ -139,8 +192,23 @@ Vagrant.configure(2) do |config|
 
         # configure ip address etc
         c.vm.hostname = vm_name
+        net_num = (n+1)%3
+        if net_num == 0 then
+           network_name = "contiv_orange"
+        else
+           if net_num == 1 then
+              network_name = "contiv_yellow"
+           else
+              network_name = "contiv_green"
+           end
+        end
         c.vm.network :private_network, ip: member_info["contiv_control_ip"]
+        if ENV['CONTIV_L3'] then
+          # create an interface for bridged network
+          node.vm.network :private_network, ip: member_info["contiv_network_ip"], virtualbox__intnet: network_name, auto_config: false
+        else
         c.vm.network :private_network, ip: member_info["contiv_network_ip"], virtualbox__intnet: "true", auto_config: false
+      end
                     c.vm.provider "virtualbox" do |v|
                 # make all nics 'virtio' to take benefit of builtin vlan tag
                 # support, which otherwise needs to be enabled in Intel drivers,
@@ -159,6 +227,7 @@ Vagrant.configure(2) do |config|
           sudo cp /shared/.etc_hosts /etc/hosts
           EOS
       end # c
+      n=n+1
     end # member_info
   end #role
 end #config
