--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -103,6 +103,7 @@ Vagrant.configure(2) do |config|
   config.vm.synced_folder "./export", "/shared"
   #config.vm.provider(:virtualbox){|v| v.functional_vboxsf = false }
   if ENV['CONTIV_L3'] then
+    base_ip="192.168.2"
     config.vm.define "quagga1" do |quagga1|
 
       quagga1.vm.box = "contiv/quagga1"
