--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -7,14 +7,6 @@ require 'fileutils'
 # netplugin_synced_gopath="/opt/golang"
 gopath_folder="/opt/gopath"
 
-# method to set up attributes for better performance
-def customize_vm(v)
-  mem = `grep 'MemTotal' /proc/meminfo | sed -e 's/MemTotal://' -e 's/ kB//'`.to_i / 1024 / 8
-  cpus = 4
-  v.customize ["modifyvm", :id, "--memory", mem]
-  v.customize ["modifyvm", :id, "--cpus", cpus]
-end
-
 # method to create an etc_hosts file based on the cluster info
 def create_etc_hosts(cluster)
   if ENV['VAGRANT_CWD'] then
@@ -85,16 +77,16 @@ create_etc_hosts(cluster)
 
 Vagrant.configure(2) do |config|
 
-  config.ssh.password = 'vagrant'
-
+  #config.ssh.password = 'vagrant'
+  config.ssh.insert_key = false
+  config.ssh.private_key_path = "./../../scripts/insecure_private_key"
+  
   config.vm.synced_folder "./export", "/shared"
-  #config.vm.provider(:virtualbox){|v| v.functional_vboxsf = false }
-
   cluster.each do |role, member_list|
     member_list.each do |member_info|
       config.vm.define vm_name = member_info["name"] do |c|
          if ENV['CONTIV_K8'] == "1" then
-       	   c.vm.box_version = "0.0.2"
+       	   c.vm.box_version = "0.0.3"
            box_name = vm_name
 	    if  role == "master" then
 	      c.vm.box = "contiv/k8master"
@@ -125,17 +117,13 @@ Vagrant.configure(2) do |config|
                s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
            end
 	else
-	    c.vm.box = "contiv/k8s-centos"
-  	    c.vm.box_version = "0.0.6"
-            c.vm.provision "shell" do |s|
-                s.inline = provision_master
-                s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
-            end             
+	    c.vm.box = "centos/7"
+  	    c.vm.box_version = "1607.1"
+	    c.vm.provision "shell" do |s|
+               s.inline = provision_master
+               s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
+            end 
 	end
-        # Customize VM for better performance
-        config.vm.provider "virtualbox" do |v|
-          customize_vm(v)
-        end # v
 
         # configure ip address etc
         c.vm.hostname = vm_name
@@ -155,6 +143,7 @@ Vagrant.configure(2) do |config|
         c.vm.provision "shell", inline: <<-EOS
           sudo setenforce 0
           sudo systemctl stop firewalld
+	  sudo /etc/init.d/network restart
           #copy the etc_hosts file we created
           sudo cp /shared/.etc_hosts /etc/hosts
           EOS
