fix consul lock issue
fix master info

consul service fix

import latest objdb

add a test for network partition

godep import

disable reload test

fix build break

Fix merge error

--- a/scripts/netContain/Dockerfile
+++ b/scripts/netContain/Dockerfile
@@ -27,7 +27,7 @@ MAINTAINER Rajesh Nataraja <rajenata@cisco.com>
 #Install the Open vSwitch package on this ubuntu container.
 RUN apt update
 RUN apt --assume-yes  install openvswitch-switch
-RUN apt --assume-yes  install net-tools
+RUN apt --assume-yes  install net-tools iptables
 
 #Copy the Net Plugin Binaries  and the Scripts required to 
 # start the Net Plugin and Net Master. 
