Adding kubeadm install mechanism for Contiv
Adding installation scripts & instructions for setting up k8s cluster for version
1.4+ (install/k8s/cluster)
and Contiv (install/k8s/contiv).

How kubectl apply contiv.yaml works:
It creates a daemonset(contiv-etcd) for etcd for netmaster/netplugin.
It creates a replicaset (contiv-netmaster) to run netmaster server.
Both of these are created on the managment kubernetes master node using
a nodeSelector kubeadm.alpha.kubernetes.io/role: master.
It also creates a daemonset (contiv-netplugin) which is run on all nodes
of the k8s cluster. The contiv-netplugin container starts contivNet.sh
which installs the CNI plugin and then runs netplugin.
contivNet.sh has been updated to take VLAN_IF, VTEP_IP and CONTIV_ETCD
from env if present.
It also copies the CNI binariy - contivk8s, to
/opt/cni/bin/ and copies the contiv.json config file to
/etc/cni/net.d/1-contiv.conf. This step is the actual
installation/registration of the k8s contiv plugin with kubernetes.
contivNet.sh also starts openvswitch on the host.

Updated vagrant install for k8s to use kubeadm/kubectl based
installation for k8s version 1.4 and
above. So make k8s-cluster now used this mechanism for the default
installation.

Additional changes:
Fixed an issue with container build (docker tag was using Contiv and
docker API in recent docker versions insists on lower case image names.)
Added ReleaseContainer.sh script to upload a given release version to
dockerhub.

Updated CNI plugin to take the default token if client certs are not
provided.

Signed-off-by: Neelima Mukiri <neelimam@gmail.com>

--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -7,6 +7,10 @@ require 'fileutils'
 # netplugin_synced_gopath="/opt/golang"
 gopath_folder="/opt/gopath"
 
+# python -c 'import random; print "%0x.%0x" % (random.SystemRandom().getrandbits(3*8), random.SystemRandom().getrandbits(8*8))
+token = "d900e1.8a392798f13b33a4"
+master_ip = "192.168.2.10"
+
 # method to create an etc_hosts file based on the cluster info
 def create_etc_hosts(cluster)
   if ENV['VAGRANT_CWD'] then
@@ -22,6 +26,7 @@ def create_etc_hosts(cluster)
       etc_file.write("#{member_info['contiv_control_ip']}   #{member_info['name']}\n")
       if role == "master" then
 	etc_file.write("#{member_info['contiv_control_ip']}   netmaster \n")
+        master_ip = member_info['contiv_control_ip']
       end
     end
   end
@@ -130,6 +135,12 @@ Vagrant.configure(2) do |config|
         c.vm.network :private_network, ip: member_info["contiv_control_ip"]
         c.vm.network :private_network, ip: member_info["contiv_network_ip"], virtualbox__intnet: "true", auto_config: false
                     c.vm.provider "virtualbox" do |v|
+
+                if vm_name == "k8master" then
+                  v.memory = 2048
+                else
+                  v.memory = 1024
+                end  
                 # make all nics 'virtio' to take benefit of builtin vlan tag
                 # support, which otherwise needs to be enabled in Intel drivers,
                 # which are used by default by virtualbox
@@ -139,14 +150,28 @@ Vagrant.configure(2) do |config|
                 v.customize ['modifyvm', :id, '--nicpromisc2', 'allow-all']
                 v.customize ['modifyvm', :id, '--nicpromisc3', 'allow-all']
                 v.customize ['modifyvm', :id, '--paravirtprovider', "kvm"]
-            end
+        end # v
         c.vm.provision "shell", inline: <<-EOS
           sudo setenforce 0
           sudo systemctl stop firewalld
-	  sudo /etc/init.d/network restart
+          sudo /etc/init.d/network restart
           #copy the etc_hosts file we created
           sudo cp /shared/.etc_hosts /etc/hosts
           EOS
+        if ENV['VAGRANT_USE_KUBEADM'] then
+            c.vm.provision :shell, path: "../../install/k8s/cluster/bootstrap_centos.sh"
+            if  role == "master" then
+               # Install kubernetes on master
+               # With the latest 1.4.4 kube*, kubeadm hangs frequently while waiting for the control plane to be available.
+               # So using v1.4.1 as per https://github.com/kubernetes/kubernetes/issues/33729 
+              c.vm.provision :shell, path: "../../install/k8s/cluster/k8smaster_centos.sh", args:[token, member_info["contiv_control_ip"], "v1.4.1"]
+               # Now install contiv
+               c.vm.provision :shell, inline: "kubectl apply -f /shared/.contiv.yaml"
+            else
+               # Install kubernetes on nodes
+              c.vm.provision :shell, path: "../../install/k8s/cluster/k8sworker_centos.sh", args:[token, master_ip]
+            end # if
+        end
       end # c
     end # member_info
   end #role
