--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -25,7 +25,7 @@ def create_etc_hosts(cluster)
     member_list.each do |member_info|
       etc_file.write("#{member_info['contiv_control_ip']}   #{member_info['name']}\n")
       if role == "master" then
-	etc_file.write("#{member_info['contiv_control_ip']}   netmaster \n")
+        etc_file.write("#{member_info['contiv_control_ip']}   netmaster \n")
         master_ip = member_info['contiv_control_ip']
       end
     end
@@ -81,7 +81,11 @@ cluster = read_cluster_config
 create_etc_hosts(cluster)
 
 Vagrant.configure(2) do |config|
-
+  if ENV['CONTIV_NODE_OS'] && ENV['CONTIV_NODE_OS'] == "rhel7" then
+    config.registration.manager = 'subscription_manager'
+    config.registration.username = ENV['CONTIV_RHEL_USER']
+    config.registration.password = ENV['CONTIV_RHEL_PASSWD']
+  end
   #config.ssh.password = 'vagrant'
   config.ssh.insert_key = false
   config.ssh.private_key_path = "./../../scripts/insecure_private_key"
@@ -122,8 +126,14 @@ Vagrant.configure(2) do |config|
                s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
            end
 	else
-	    c.vm.box = "centos/7"
-  	    c.vm.box_version = "1607.1"
+          if ENV['CONTIV_NODE_OS'] && ENV['CONTIV_NODE_OS'] == "rhel7" then
+            # Download rhel7.2 box from https://access.redhat.com/downloads/content/293/ver=2/rhel---7/2.0.0/x86_64/product-software
+            # Add it as rhel7 vagrant box add rhel-cdk-kubernetes-7.2-29.x86_64.vagrant-virtualbox.box --name=rhel7
+            c.vm.box = "rhel7"
+          else
+            c.vm.box = "centos/7"
+            c.vm.box_version = "1607.1"
+          end
 	    c.vm.provision "shell" do |s|
                s.inline = provision_master
                s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
@@ -151,6 +161,15 @@ Vagrant.configure(2) do |config|
                 v.customize ['modifyvm', :id, '--nicpromisc3', 'allow-all']
                 v.customize ['modifyvm', :id, '--paravirtprovider', "kvm"]
         end # v
+        # RHEL box that is available with the CDK comes with an older version
+        # of k8s. Uninstall it and install openvswitch.
+        if ENV['CONTIV_NODE_OS'] && ENV['CONTIV_NODE_OS'] == "rhel7" then
+          c.vm.provision "shell", inline: <<-EOS
+            yum remove -y kubernetes-node-1.2.0-0.13.gitec7364b.el7.x86_64
+            yum remove -y kubernetes-client-1.2.0-0.13.gitec7364b.el7.x86_64
+            yum install -y https://cisco.box.com/shared/static/zzmpe1zesdpf270k9pml40rlm4o8fs56.rpm
+            EOS
+        end
         c.vm.provision "shell", inline: <<-EOS
           sudo setenforce 0
           sudo systemctl stop firewalld
