Vagrantfile: enforcement of minimum Vagrant version (currently 1.7.3)
Signed-off-by: Bill Robinson <dseevr@users.noreply.github.com>

--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -1,5 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
+
+require File.join(File.dirname(__FILE__), "..", "vagrant_version_check")
+
 require "rubygems"
 require "json"
 require 'fileutils'
