--- a/vagrant/mesos-cni/Vagrantfile
+++ b/vagrant/mesos-cni/Vagrantfile
@@ -1,6 +1,8 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
+require File.join(File.dirname(__FILE__), "..", "vagrant_version_check")
+
 require 'fileutils'
 
 # netplugin_synced_gopath="/opt/golang"
