--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -76,6 +76,7 @@ go get github.com/tools/godep
 cd $GOPATH/src/github.com/tools
 go install ./godep
 sudo yum install -y net-tools
+sudo yum install -y git
 #git config --global http.proxy $HTTP_PROXY
 SCRIPT
 
@@ -98,7 +99,7 @@ Vagrant.configure(2) do |config|
     member_list.each do |member_info|
       config.vm.define vm_name = member_info["name"] do |c|
          if ENV['CONTIV_K8'] == "1" then
-       	   c.vm.box_version = "0.0.3"
+       	   c.vm.box_version = "0.0.4"
            box_name = vm_name
 	    if  role == "master" then
 	      c.vm.box = "contiv/k8master"
@@ -134,8 +135,8 @@ Vagrant.configure(2) do |config|
             # Add it as rhel7 vagrant box add rhel-cdk-kubernetes-7.2-29.x86_64.vagrant-virtualbox.box --name=rhel7
             c.vm.box = "rhel7"
           else
-            c.vm.box = "centos/7"
-            c.vm.box_version = "1611.01"
+            c.vm.box = "contiv/k8s-centos"
+            c.vm.box_version = "0.0.7"
           end
 	    c.vm.provision "shell" do |s|
                s.inline = provision_master
