--- a/vagrant/k8s/Vagrantfile
+++ b/vagrant/k8s/Vagrantfile
@@ -10,6 +10,9 @@ require 'fileutils'
 # netplugin_synced_gopath="/opt/golang"
 gopath_folder="/opt/gopath"
 
+http_proxy = ENV['HTTP_PROXY'] || ENV['http_proxy'] || ''
+https_proxy = ENV['HTTPS_PROXY'] || ENV['https_proxy'] || ''
+
 # python -c 'import random; print "%0x.%0x" % (random.SystemRandom().getrandbits(3*8), random.SystemRandom().getrandbits(8*8))
 token = "d900e1.8a392798f13b33a4"
 master_ip = "192.168.2.10"
@@ -36,6 +39,14 @@ def create_etc_hosts(cluster)
 
   etc_file.close
 end
+
+provision_quagga = <<SCRIPT
+## setup the environment file. Export the env-vars passed as args to 'vagrant up'
+echo Args passed: [[ $@ ]]
+echo "export http_proxy='$1'" >> /etc/profile.d/envvar.sh
+echo "export https_proxy='$2'" >> /etc/profile.d/envvar.sh
+source /etc/profile.d/envvar.sh
+SCRIPT
 
 # method to read the cluster config file
 def read_cluster_config
@@ -89,6 +100,47 @@ Vagrant.configure(2) do |config|
     config.registration.username = ENV['CONTIV_RHEL_USER']
     config.registration.password = ENV['CONTIV_RHEL_PASSWD']
   end
+  if ENV['CONTIV_L3'] then
+      config.vm.define "quagga1" do |quagga1|
+
+        quagga1.vm.box = "contiv/quagga1"
+        quagga1.vm.box_version = "0.0.1"
+        quagga1.vm.host_name = "quagga1"
+        quagga1.vm.network :private_network, ip: "192.168.2.51", virtualbox__intnet: "true", auto_config: false
+        quagga1.vm.network "private_network",
+                         ip: "80.1.1.200",
+                         virtualbox__intnet: "contiv_orange"
+        quagga1.vm.network "private_network",
+                         ip: "70.1.1.2",
+                         virtualbox__intnet: "contiv_blue"
+        quagga1.vm.provision "shell" do |s|
+          s.inline = provision_quagga
+          s.args = [http_proxy, https_proxy]
+        end
+      end
+      config.vm.define "quagga2" do |quagga2|
+
+        quagga2.vm.box = "contiv/quagga2"
+        quagga2.vm.box_version = "0.0.1"
+        quagga2.vm.host_name = "quagga2"
+        quagga2.vm.network :private_network, ip: "192.168.2.52", virtualbox__intnet: "true", auto_config: false
+        quagga2.vm.network "private_network",
+                         ip: "70.1.1.1",
+                         virtualbox__intnet: "contiv_blue"
+        quagga2.vm.network "private_network",
+                         ip: "60.1.1.200",
+                         virtualbox__intnet: "contiv_green"
+        quagga2.vm.network "private_network",
+                         ip: "50.1.1.200",
+                         virtualbox__intnet: "contiv_yellow"
+
+        quagga2.vm.provision "shell" do |s|
+          s.inline = provision_quagga
+          s.args = [http_proxy, https_proxy]
+        end
+      end
+   end
+
   #config.ssh.password = 'vagrant'
   config.ssh.insert_key = false
   config.ssh.private_key_path = "./../../scripts/insecure_private_key"
@@ -134,20 +186,32 @@ Vagrant.configure(2) do |config|
             # Add it as rhel7 vagrant box add rhel-cdk-kubernetes-7.2-29.x86_64.vagrant-virtualbox.box --name=rhel7
             c.vm.box = "rhel7"
           else
-            c.vm.box = "centos/7"
-            c.vm.box_version = "1611.01"
+            c.vm.box = "contiv/k8s-centos"
+            c.vm.box_version = "0.0.7"
           end
 	    c.vm.provision "shell" do |s|
                s.inline = provision_master
                s.args = [ENV["http_proxy"] || "", ENV["https_proxy"] || ""]
             end 
 	end
-
+	network_name = "contiv_purple"
+	if ENV['CONTIV_L3'] then
+	   if vm_name == "k8node-03" then
+             network_name = "contiv_orange"
+           end
+	   if vm_name == "k8node-01" then
+              network_name = "contiv_yellow"
+           end
+	   if vm_name == "k8node-02" then
+              network_name = "contiv_green"
+           end
+        end
+	
         # configure ip address etc
         c.vm.hostname = vm_name
-        c.vm.network :private_network, ip: member_info["contiv_control_ip"]
-        c.vm.network :private_network, ip: member_info["contiv_network_ip"], virtualbox__intnet: "true", auto_config: false
-                    c.vm.provider "virtualbox" do |v|
+        c.vm.network :private_network, ip: member_info["contiv_control_ip"], virtualbox__intnet: "true"
+        c.vm.network :private_network, ip: member_info["contiv_network_ip"], virtualbox__intnet: network_name, auto_config: false
+        c.vm.provider "virtualbox" do |v|
 
                 if vm_name == "k8master" then
                   v.memory = 2048
