Docker 1.13 swarm-mode support for contiv

--- a/install/v2plugin/Dockerfile
+++ b/install/v2plugin/Dockerfile
@@ -1,13 +1,11 @@
 # Docker v2plugin container with OVS / netplugin / netmaster 
 
-FROM ubuntu:16.04
+FROM alpine:3.5
 MAINTAINER Cisco Contiv (http://contiv.github.io/)
 
 RUN mkdir -p /run/docker/plugins /etc/openvswitch /var/run/contiv/log \
- && apt-get update \
- && apt-get install -y openvswitch-switch=2.5.0-0ubuntu1 \
-        net-tools iptables iputils-ping netcat \
- && rm -rf /var/lib/apt/lists/*
+    && echo 'http://dl-cdn.alpinelinux.org/alpine/v3.4/main' >> /etc/apk/repositories \
+    && apk update && apk add openvswitch=2.5.0-r0 iptables
 
 COPY netplugin netmaster netctl startcontiv.sh /
 
