--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,10 @@ cscope*
 .out.vagrant
 .etc_hosts
 
+# docker v2 plugin temp files
+install/v2plugin/rootfs
+install/v2plugin/config.json
+
 # version
 version/version_gen.go
 
