scripts/netContain,.gitignore: refactor scripts
Signed-off-by: Cristian Staretu <cristian.staretu@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,9 @@ cscope*
 install/v2plugin/rootfs
 install/v2plugin/config.json
 
+# netcontain temporary build files
+scripts/netContain/bin
+
 # version
 version/version_gen.go
 
