Split auth_proxy routes out into auth_proxy.raml, updated Dockerfile to rely on bindmounts rather than copying in files, changed protocol to https
Signed-off-by: Bill Robinson <dseevr@users.noreply.github.com>

--- a/spec/Dockerfile
+++ b/spec/Dockerfile
@@ -2,10 +2,8 @@ FROM node:alpine
 
 RUN npm install -g raml2html
 
-COPY . /contiv
+RUN mkdir /contiv
 
 WORKDIR /contiv
 
-RUN raml2html -i contiv.raml -o contiv.html
-
-ENTRYPOINT ["/bin/sh"]
+ENTRYPOINT ["raml2html"]
