v2plugin set forward mode when netmaster up (#1058)
* v2plugin set forward mode when netmaster up

Docker expects the netplugin socket to be available within 10 seconds
before it fails enabling (or installing) the v2plugin.

Due to #1043, netplugin is blocking waiting for the forward mode to be
set, which is done by netctl calling netmaster, but netmaster is not
started until the plugin is activating.

Instead of backgrounding the plugin install/enabling then letting
ansible set the forward mode, do it in the plugin script to avoid
ansible's unpredictable round trip delays.

v2plugin’s startcontiv.sh errors when fwd_mode not set

Signed-off-by: Chris Plock <chrisplo@cisco.com>

--- a/install/v2plugin/config.template
+++ b/install/v2plugin/config.template
@@ -103,6 +103,14 @@
           ],
           ## Do not change the default value, this will be replaced with $CONTIV_V2PLUGIN_NAME
           "Value": "__CONTIV_V2PLUGIN_NAME__"
+       },
+       {
+          "Description": "Forwarding mode for netplugin",
+          "Name": "fwd_mode",
+          "Settable": [
+             "value"
+          ],
+          "Value": ""
        }
     ],
     "mounts": [
