fix v2plugin startcontiv.sh for netplugin updates (#1086)
run startcontiv.sh with bash

start netplugin after netmaster

set network and forward modes for v2plugin
netplugin will not start without setting the network and forward modes

Signed-off-by: Chris Plock <chrisplo@cisco.com>

--- a/install/v2plugin/Dockerfile
+++ b/install/v2plugin/Dockerfile
@@ -5,7 +5,8 @@ LABEL maintainer "Cisco Contiv (https://contiv.github.io)"
 
 RUN mkdir -p /run/docker/plugins /etc/openvswitch /var/run/contiv/log \
  && echo 'http://dl-cdn.alpinelinux.org/alpine/v3.4/main' >> /etc/apk/repositories \
- && apk --no-cache add openvswitch=2.5.0-r0 iptables ca-certificates openssl curl
+ && apk --no-cache add \
+      openvswitch=2.5.0-r0 iptables ca-certificates openssl curl bash
 
 # copy in binaries and scripts
 ARG TAR_FILE
